<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.espy.roohtour.ui.profile.view.ProfileViewModel" />

        <variable
            name="viewParent"
            type="com.espy.roohtour.ui.profile.view.LoginFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:background="@color/white">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.25"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/avenir_heavy"
            android:text="@string/welcome"/>
        
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="64dp"
            android:padding="14dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/avenir_light"
            android:hint="@string/hint_username"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:background="@drawable/bg_edittext"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:padding="14dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/avenir_light"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:background="@drawable/bg_edittext"/>

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="9dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:fontFamily="@font/avenir_medium"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"/>

        <Button
            android:id="@+id/btnLogin"
            style="@style/EspyButtonStyle"
            android:background="@drawable/bg_cap_button"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:padding="14dp"
            android:textSize="15sp"
            android:onClick="@{(view) -> viewParent.onClick(view)}"
            android:text="@string/login_now"
            android:fontFamily="@font/avenir_medium"
            app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword"/>

        <TextView
            android:id="@+id/tvShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintVertical_bias="0.5"
            android:text="@string/show"
            android:textColor="@color/black"
            android:fontFamily="@font/avenir_medium"
            app:layout_constraintTop_toTopOf="@+id/etPassword"
            app:layout_constraintBottom_toBottomOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"/>

        <TextView
            android:id="@+id/tvSignupPromp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="36dp"
            android:text="@string/signup_prompt"
            android:textColor="@color/black"
            android:fontFamily="@font/avenir_medium"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintEnd_toStartOf="@+id/signup"/>

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="5dp"
            android:text="@string/signup"
            android:textColor="@color/app_accent_color"
            android:fontFamily="@font/avenir_medium"
            app:layout_constraintVertical_bias="0.5"
            android:onClick="@{(view) -> viewParent.onClick(view)}"
            app:layout_constraintBottom_toBottomOf="@+id/tvSignupPromp"
            app:layout_constraintStart_toEndOf="@+id/tvSignupPromp"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>