<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sales_return"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/avenir_heavy"
                app:layout_constraintVertical_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnClose"/>

            <ImageView
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:layout_marginRight="16dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toTopOf="@+id/tvTitle"
                app:layout_constraintStart_toEndOf="@+id/tvTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/promptPurchaseOrderNum"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/purchase_order_num"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/avenir_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <AutoCompleteTextView
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="left|top"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/avenir_light"
                android:padding="7dp"
                android:imeOptions="actionNext"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext"
                app:layout_constraintTop_toBottomOf="@+id/promptPurchaseOrderNum"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <ImageView
                app:layout_constraintTop_toTopOf="@+id/etSearch"
                app:layout_constraintBottom_toBottomOf="@+id/etSearch"
                app:layout_constraintStart_toStartOf="@+id/etSearch"
                app:layout_constraintEnd_toEndOf="@+id/etSearch"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/promptPurchaseOrder"
                app:layout_constraintTop_toBottomOf="@+id/etSearch"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/purchase_order"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/avenir_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/purchase_order_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/promptPurchaseOrder"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                tools:listitem="@layout/row_item_purchase_order_list"/>

            <Button
                android:id="@+id/btnSubmit"
                style="@style/EspyButtonStyle"
                android:background="@drawable/bg_cap_button"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="24dp"
                android:padding="14dp"
                android:textSize="15sp"
                android:text="@string/submit"
                android:fontFamily="@font/avenir_medium"
                app:layout_constraintTop_toBottomOf="@+id/purchase_order_list"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>