<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.espy.roohtour.ui.attendance.view.AttendanceViewModel" />

        <variable
            name="viewParent"
            type="com.espy.roohtour.ui.attendance.view.AttendanceFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:paddingBottom="9dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/capturePrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/capture_image_prompt"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/avenir_medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                app:layout_constraintTop_toBottomOf="@+id/capturePrompt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp"
                android:id="@+id/camlay"
                android:background="@color/border_color1"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="196dp"
                android:layout_height="196dp">

                <RelativeLayout
                    android:background="@drawable/dotted_rect"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/capture"
                        android:src="@drawable/ic_camera"
                        android:padding="4dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:onClick="@{(view) -> viewParent.onClick(view)}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/img"
                        android:layout_below="@+id/capture"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/upload_image"
                        android:fontFamily="@font/avenir_medium"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:id="@+id/userImg"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_width="144dp"
                        android:layout_height="144dp" />

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="24dp"
                app:layout_constraintTop_toBottomOf="@+id/camlay"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:background="@color/white"
            android:paddingBottom="24dp"
            app:layout_constraintTop_toBottomOf="@+id/lay1">

            <TextView
                android:id="@+id/tvAttendancePrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/mark_attendance_prompt"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/avenir_medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                tools:text="27 June, 10:00 AM"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/avenir_heavy"
                app:layout_constraintTop_toBottomOf="@+id/tvAttendancePrompt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <LinearLayout
                android:id="@+id/punchinlay"
                android:background="@drawable/bg_orange_border_white_filled_curver_corner_rect"
                tools:background="@drawable/bg_cap_button"
                android:gravity="center"
                android:layout_marginTop="36dp"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:paddingLeft="36dp"
                android:paddingRight="36dp"
                android:layout_width="0dp"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="16dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="@{(view) -> viewParent.onClick(view)}"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/punchoutlay"
                app:layout_constraintTop_toBottomOf="@+id/tvDate">

                <TextView
                    android:id="@+id/punch"
                    android:text="@string/punchin"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    tools:textColor="@color/white"
                    android:fontFamily="@font/avenir_medium"
                    android:drawableTop="@drawable/ic_checked_in_a"
                    android:drawableTint="@color/app_accent_color"
                    tools:drawableTint="@color/white"
                    android:drawablePadding="7dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/punchoutlay"
                android:gravity="center"
                android:background="@drawable/bg_orange_border_white_filled_curver_corner_rect"
                tools:background="@drawable/bg_orange_border_white_filled_curver_corner_rect"
                android:layout_marginTop="36dp"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:paddingLeft="36dp"
                android:paddingRight="36dp"
                android:layout_width="0dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="16dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="@{(view) -> viewParent.onClick(view)}"
                app:layout_constraintStart_toEndOf="@+id/punchinlay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDate">

                <TextView
                    android:id="@+id/punchout"
                    android:text="@string/punchout"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:drawableTop="@drawable/ic_check_out_active_a"
                    android:fontFamily="@font/avenir_medium"
                    android:drawableTint="@color/app_accent_color"
                    android:drawablePadding="7dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>